refactor: eliminate deprecated API usages, fix SocketService this-escape, and update profile to production